samples/_failures_safe/1761699308_2a4bbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cc4d2c0.c: In function ‘main’:
./samples/SAFE/__tmp_9cc4d2c0.c:146:17: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  146 |                 input
      |                 ^~~~~
      |                 int
./samples/SAFE/__tmp_9cc4d2c0.c:146:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9cc4d2c0.c:146:22: error: expected ‘;’ at end of input
  146 |                 input
      |                      ^
      |                      ;
./samples/SAFE/__tmp_9cc4d2c0.c:146:17: error: expected declaration or statement at end of input
  146 |                 input
      |                 ^~~~~
./samples/SAFE/__tmp_9cc4d2c0.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9cc4d2c0.c:146:17: error: expected declaration or statement at end of input
